# AcademicPortal

Backend/: pyproject.toml
Backend/app/api/v1/: utility.py
Backend/app/core/: __init__.py  config.py
Backend/app/db/: database.py
Backend/app/utility/auth/: helper.py
Backend/app/utility/brevo/: helper.py
Backend/app/utility/cloudinary/: helper.py
