[project]
name = "academic-portal-backend"
version = "0.1.0"
description = "FastAPI backend for managing API for Academic Portal project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.4",
    "fastapi-mail>=1.6.5",
    "fastapi[standard]>=0.138.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

